bk_ida/gobmkida/c1/approxlib
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/approxlib/src/engine/board.c:2167:25: error: use of undeclared identifier 'dword_A741AC'
if ( byte_9AA89F[v8] || dword_A741AC[v8] == v11 ) 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/approxlib/src/engine/board.c:2167:6: error: use of undeclared identifier 'byte_9AA89F'
if ( byte_9AA89F[v8] || dword_A741AC[v8] == v11 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/approxlib/src/engine/board.c:2169:24: error: use of undeclared identifier 'byte_9AA89F'
if ( ( unsigned __int8)byte_9AA89F[v8] == color ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/approxlib/src/engine/board.c:2216:1: error: use of undeclared identifier 'dword_A741AC'
dword_A741AC[v8] = v11; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/approxlib/src/engine/board.c:2218:6: error: use of undeclared identifier 'byte_9AA88C'
if ( byte_9AA88C[v8] || string_number[v8 + 384] == v11 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/approxlib/src/engine/board.c:2220:24: error: use of undeclared identifier 'byte_9AA88C'
if ( ( unsigned __int8)byte_9AA88C[v8] == color ) 
                       ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/approxlib/src/obj/1/board.o] Error 1
